# agent_UAV

./: .gitignore  LICENSE  README.md  RflyUdpMavlinkRealSim.bat  conftest.py  generate.py  install_python312.bat  pyproject.toml  requirements.txt  temp_output.md  控制指令.docx
ServerFile/: Communication_Mavlink.py  Config.json  Coordinate_Transformation.py  Description.py  OpenAI_api_Mavlink_Agent.py  main.py  text.py  volcEngineLLM.py
ServerFile/groundingdino/config/: GroundingDINO_SwinT_OGC.py
ServerFile/groundingdino/models/GroundingDINO/: bertwarper.py  groundingdino.py
ServerFile/groundingdino/util/: __init__.py  inference.py
ServerFile/local_bert_model/: config.json
ServerFile/weights/: coco-pe.pt
configs/: config.yaml
src/: __init__.py  main.py  orchestrator.py
src/agent/: __init__.py  uav_agent.py
src/llm/: __init__.py  volcano_engine.py
src/perception/: __init__.py  grounding_dino.py
src/uav/: __init__.py  mavlink_controller.py  simulator.py
tests/: test_grounding_dino.py  test_orchestrator.py  test_simulator.py  test_volcano_engine.py
